--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,23 @@
 		</dependency>
 
 		<!-- Dependency for JSTL to be added -->
-		
+	  <dependency>
+		  <groupId>javax.servlet</groupId>
+		  <artifactId>jstl</artifactId>
+		  <version>1.2</version>
+	  </dependency>
 		<!-- Dependency for jaxb-api to be added(if using JDK9) -->
-
+	  <dependency>
+		  <groupId>javax.xml.bind</groupId>
+		  <artifactId>jaxb-api</artifactId>
+		  <version>2.4.0-b180830.0359</version>
+	  </dependency>
 		<!-- Dependency for jaxb-impl to be added(if using JDK9) -->
-
+	  <dependency>
+		  <groupId>com.sun.xml.bind</groupId>
+		  <artifactId>jaxb-impl</artifactId>
+		  <version>2.4.0-b180830.0438</version>
+	  </dependency>
 		<!-- Dependency for Spring Test to be added -->
 
 		<dependency>
